2009-06-17  Zoltan Varga  <vargaz@gmail.com>

	* dwarfwriter.c (mono_dwarf_writer_emit_base_info): Emit some line number
	infor even if emit_line is FALSE, as the apple linker seems to require it.

	* image-writer.c (asm_writer_emit_symbol_diff): Call get_label ().

	* dwarfwriter.c (emit_cie): Emit a separate symbol for the cie start, as
	gcc does.
	(emit_fde): Ditto.

2009-06-15  Zoltan Varga  <vargaz@gmail.com>

	* exceptions-mips.c (mono_arch_get_throw_exception_by_name): Fix the
	mips build.

2009-06-13  Zoltan Varga  <vargaz@gmail.com>

	* mini.h (struct MonoBasicBlock): Add 'has_jump_table' and 
	'has_call_handler' fields.

	* method-to-ir.c (mono_method_to_ir): Set them if needed.

	* branch-opts.c (mono_merge_basic_blocks): Avoid iterating through the
	first bblock if not needed. Fixes #512790.
	
2009-06-11  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (mono_compile_assembly): Fix a warning.
	
	* aot-compiler.c (add_wrappers): Don't emit remoting-invoke-with-check
	wrappers.

	* aot-runtime.c (mono_aot_get_method): Use the original method's code for
	remoting-invoke-with-check wrappers, which are not needed when running with
	full-aot, since it doesn't support remoting.
	
2009-06-10  Zoltan Varga  <vargaz@gmail.com>

	* aot-compiler.c (emit_got_info): Don't emit offsets for the plt got entries.

	* aot-compiler.c aot-runtime.c: Don't emit the first got offset in the
	method info, it is not used anymore.

	* mini.h: Bump AOT file format version.
	
	* aot-compiler.c (arch_emit_plt_entry): Make the arm plt entries one
	word smaller.

	* aot-runtime.c (mono_aot_get_plt_info_offset): Update after the
	change above.
	
	* tramp-arm.c (mono_arch_patch_plt_entry): Ditto.

	* mini.h: Bump AOT file format version.
	
2009-06-10  Zoltan Varga  <vargaz@gmail.com>

	* image-writer.c (asm_writer_emit_symbol_diff): Disable the 
	TARGET_ASM_APPLE stuff for now, as it doesn't seem to work on the
	iphone.
