@@ -1,5 +1,10 @@
 2009-06-17  Zoltan Varga  <vargaz@gmail.com>
 
+	* branch-opts.c (mono_merge_basic_blocks): Fix the case when bbn
+	falls through to its next bblock. Fixes #513931.
+
+	* iltests.il: Add a test.
+
 	* dwarfwriter.c (mono_dwarf_writer_emit_base_info): Emit some line number
 	infor even if emit_line is FALSE, as the apple linker seems to require it.
 
